added histogram vectorizer

--- a/K-arg top-N statistics.ipynb
+++ b/K-arg top-N statistics.ipynb
@@ -9,14 +9,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Agr 0\n",
+      "[   ('000004', 130561),\n",
+      "    ('00000000', 102077),\n",
+      "    ('', 96893),\n",
+      "    ('03', 89002),\n",
+      "    ('00006b2c', 84168),\n",
+      "    ('0000', 54961),\n",
+      "    ('000040', 41456),\n",
+      "    ('00000001', 38855),\n",
+      "    ('000020', 23049),\n",
+      "    ('01', 18767)]\n",
+      "For Agr 1\n",
+      "[   ('004000', 120153),\n",
+      "    ('047c8042', 89541),\n",
+      "    ('000004', 89408),\n",
+      "    ('00000000', 53925),\n",
+      "    ('000000', 45763),\n",
+      "    ('0fbd8855', 44307),\n",
+      "    ('0c31e5c5', 17712),\n",
+      "    ('02f008fc', 17712),\n",
+      "    ('0a907ecb', 17712),\n",
+      "    ('00007049', 15908)]\n",
+      "For Agr 2\n",
+      "[   ('01', 127687),\n",
+      "    ('000000', 39399),\n",
+      "    ('00000008', 38841),\n",
+      "    ('000006', 37401),\n",
+      "    ('000002', 18759),\n",
+      "    ('00000000', 14712),\n",
+      "    ('08', 11273),\n",
+      "    ('000007', 9148),\n",
+      "    ('00108000', 6534),\n",
+      "    ('0000066a', 5915)]\n",
+      "For Agr 3\n",
+      "[   ('004008', 70965),\n",
+      "    ('00006ce5', 58347),\n",
+      "    ('000006c8', 45511),\n",
+      "    ('00000000', 42932),\n",
+      "    ('004000', 30959),\n",
+      "    ('00006b2c', 17290),\n",
+      "    ('0000002a', 7115),\n",
+      "    ('00007049', 6812),\n",
+      "    ('00077960', 4823),\n",
+      "    ('0000066a', 4105)]\n",
+      "For Agr 4\n",
+      "[   ('01', 97449),\n",
+      "    ('0000066a', 56599),\n",
+      "    ('047c8042', 37500),\n",
+      "    ('00000000', 22450),\n",
+      "    ('06b60862', 10060),\n",
+      "    ('02', 8260),\n",
+      "    ('0da3b4d3', 5694),\n",
+      "    ('013ebb32', 5169),\n",
+      "    ('03271585', 4823),\n",
+      "    ('00e7ef17', 4788)]\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
     "train_csv_path = \"./data/train/train_agent\"\n",
-    "#train_csv = pd.read_csv(train_csv_path)\n",
     "\n",
     "# list of tuples\n",
     "# (token, count)\n",
@@ -29,7 +90,6 @@
     "}\n",
     "\n",
     "#k = [1,2,3,4,5]\n",
-    ":q\n",
     "\n",
     "#for i in range(len(train_csv)):\n",
     "    #with open(\"./data/train/\" + train_csv.iloc[i,0] + \".\" + train_csv.iloc[i,1]) as e:\n",
@@ -53,8 +113,17 @@
     "\n",
     "\n",
     "            \n",
-    "            \n",
-    "            "
+    "import operator\n",
+    "import pprint\n",
+    "\n",
+    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "\n",
+    "for arg in ['0','1','2','3','4']:\n",
+    "    print(\"For Agr {0}\".format(arg))\n",
+    "    sorted_arg = sorted(arg_hist[arg].items(), key=operator.itemgetter(1), reverse=True)\n",
+    "    arg_high = sorted_arg[:10]\n",
+    "    pp.pprint(arg_high)\n",
+    "    #arg0_low = sorted_arg0[-2000:-1990]"
    ]
   },
   {
@@ -1099,15 +1168,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For Agr 0\n",
+      "[   ('000004', 130561),\n",
+      "    ('00000000', 102077),\n",
+      "    ('', 96893),\n",
+      "    ('03', 89002),\n",
+      "    ('00006b2c', 84168),\n",
+      "    ('0000', 54961),\n",
+      "    ('000040', 41456),\n",
+      "    ('00000001', 38855),\n",
+      "    ('000020', 23049),\n",
+      "    ('01', 18767)]\n",
+      "For Agr 1\n",
+      "[   ('004000', 120153),\n",
+      "    ('047c8042', 89541),\n",
+      "    ('000004', 89408),\n",
+      "    ('00000000', 53925),\n",
+      "    ('000000', 45763),\n",
+      "    ('0fbd8855', 44307),\n",
+      "    ('0c31e5c5', 17712),\n",
+      "    ('02f008fc', 17712),\n",
+      "    ('0a907ecb', 17712),\n",
+      "    ('00007049', 15908)]\n",
+      "For Agr 2\n",
+      "[   ('01', 127687),\n",
+      "    ('000000', 39399),\n",
+      "    ('00000008', 38841),\n",
+      "    ('000006', 37401),\n",
+      "    ('000002', 18759),\n",
+      "    ('00000000', 14712),\n",
+      "    ('08', 11273),\n",
+      "    ('000007', 9148),\n",
+      "    ('00108000', 6534),\n",
+      "    ('0000066a', 5915)]\n",
+      "For Agr 3\n",
+      "[   ('004008', 70965),\n",
+      "    ('00006ce5', 58347),\n",
+      "    ('000006c8', 45511),\n",
+      "    ('00000000', 42932),\n",
+      "    ('004000', 30959),\n",
+      "    ('00006b2c', 17290),\n",
+      "    ('0000002a', 7115),\n",
+      "    ('00007049', 6812),\n",
+      "    ('00077960', 4823),\n",
+      "    ('0000066a', 4105)]\n",
+      "For Agr 4\n",
+      "[   ('01', 97449),\n",
+      "    ('0000066a', 56599),\n",
+      "    ('047c8042', 37500),\n",
+      "    ('00000000', 22450),\n",
+      "    ('06b60862', 10060),\n",
+      "    ('02', 8260),\n",
+      "    ('0da3b4d3', 5694),\n",
+      "    ('013ebb32', 5169),\n",
+      "    ('03271585', 4823),\n",
+      "    ('00e7ef17', 4788)]\n"
+     ]
+    }
+   ],
    "source": [
     "import operator\n",
+    "import pprint\n",
     "\n",
-    "sorted_arg0 = sorted(arg_hist['0'].items(), key=operator.itemgetter(1), reverse=True)\n",
-    "arg0_high = sorted_arg0[:10]\n",
-    "arg0_low = sorted_arg0[-2000:-1990]"
+    "pp = pprint.PrettyPrinter(indent=4)\n",
+    "\n",
+    "for arg in ['0','1','2','3','4']:\n",
+    "    print(\"For Agr {0}\".format(arg))\n",
+    "    sorted_arg = sorted(arg_hist[arg].items(), key=operator.itemgetter(1), reverse=True)\n",
+    "    arg_high = sorted_arg[:10]\n",
+    "    pp.pprint(arg_high)\n",
+    "    #arg0_low = sorted_arg0[-2000:-1990]\n",
+    "    "
    ]
   },
   {
