--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Team\n",
     "  * **Team name**:  MMM\n",
-    "  * **Members**:  Maria Sargsyan (<email here>), Muneeb Aadil (maadil@mpi-inf.mpg.de), Muhammad Yaseen (<email here>).\n",
+    "  * **Members**:  Maria Sargsyan (<email here>), Muneeb Aadil (2581794, maadil@mpi-inf.mpg.de), Muhammad Yaseen (2577833, myaseen@mpi-inf.mpg.de).\n",
     "\n",
     "\n",
     "## Logistics\n",
@@ -107,28 +107,36 @@
     "\n",
     "from IPython.display import display, HTML\n",
     " \n",
-    "%matplotlib inline \n",
+    "#%matplotlib inline \n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots \n",
     "plt.rcParams['image.interpolation'] = 'nearest' \n",
     "plt.rcParams['image.cmap'] = 'gray' \n",
     " \n",
     "# for auto-reloading external modules \n",
     "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython \n",
-    "%load_ext autoreload\n",
-    "%autoreload 2"
+    "#%load_ext autoreload\n",
+    "#%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9999/9999 [00:00<00:00, 1597792.05it/s]\n"
+     ]
+    }
+   ],
    "source": [
     "# Some suggestions of our libraries that might be helpful for this project\n",
     "from collections import Counter          # an even easier way to count\n",
     "from multiprocessing import Pool         # for multiprocessing\n",
-    "from tqdm import tqdm_notebook as tqdm                    # fancy progress bars\n",
-    "\n",
+    "from tqdm import tqdm                    # fancy progress bars\n",
+    "  \n",
     "# Load other libraries here.\n",
     "# Keep it minimal! We should be easily able to reproduce your code.\n",
     "# We only support sklearn and pytorch.\n",
@@ -175,54 +183,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "# train examples (Should be 13682) : 13682\n",
-      "# test  examples (Should be 10000) : 10000\n"
-     ]
-    }
-   ],
    "source": [
     "# Check that you are prepared with the data\n",
-    "! printf '# train examples (Should be 13682) : '; ls data/train | wc -l\n",
-    "! printf '# test  examples (Should be 10000) : '; ls data/test | wc -l\n",
-    "\n",
-    "# Agent, Allaple, AutoIt, Basun, NothingFound, Patched, Swizzor, Texel, VB, Virut\n",
-    "\n",
-    "# Counts in training data\n",
-    "\n",
-    "# Basun: 2053\n",
-    "# NothingFound: 3475\n",
-    "# Agent: 454\n",
-    "# Allaple: 524\n",
-    "# AutoIt: 718\n",
-    "# Patched: 481\n",
-    "# Swizzor: 609\n",
-    "# Texel: 3408\n",
-    "# VB: 767\n",
-    "# Virut: 1193   \n",
-    "\n",
-    "\n",
-    "# Counts in testing data\n",
-    "\n",
-    "# Basun: 1563\n",
-    "# NothingFound: 2528\n",
-    "# Agent: 294\n",
-    "# Allaple: 345\n",
-    "# AutoIt: 467\n",
-    "# Patched: 335\n",
-    "# Swizzor: 428\n",
-    "# Texel: 2585\n",
-    "# VB: 556\n",
-    "# Virut: 899\n",
-    "\n",
-    "\n"
+    "#! printf '# train examples (Should be 13682) : '; ls data/train | wc -l\n",
+    "#! printf '# test  examples (Should be 10000) : '; ls data/test | wc -l"
    ]
   },
   {
@@ -309,135 +275,7 @@
    "source": [
     "CLASSES = ['Agent', 'Allaple', 'AutoIt', 'Basun', 'NothingFound', 'Patched', 'Swizzor', 'Texel', 'VB', 'Virut']\n",
     "\n",
-    "def file_load_kernel(filepath):\n",
-    "    '''Given a filepath, returns (content, classname), where content = [list of lines in file]'''\n",
-    "    label = filepath.split('.')[2]\n",
-    "    lines = open(filepath).readlines()\n",
-    "    lines_sanitized = [s.strip('\\n').replace('|','') for s in lines if not '#' in s]\n",
-    "            \n",
-    "    return lines_sanitized, label\n",
-    "\n",
-    "# packing only the loading part in a function, for convenience with Pool\n",
-    "def _load_data(file_paths):\n",
-    "    out = [None] * len(file_paths)\n",
-    "    for i, f in tqdm(enumerate(file_paths)):\n",
-    "        lines, label = file_load_kernel(f)\n",
-    "        out[i] = (lines, label)\n",
-    "    return out\n",
-    "\n",
-    "def load_data(data_path, mode='train', nworkers=10, load_only=-1):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        data_path (string): root path containing the dataset\n",
-    "        mode (string): can be ['train', 'test']\n",
-    "        nworkers (int/string) : number of cores to use.\n",
-    "        load_only (int): number of samples to load (for debugging reasons), use -1 to load all.\n",
-    "    \n",
-    "    Returns:\n",
-    "        raw_data_samples (tuple): (x, y ) where\n",
-    "            x = sequence of strings (i.e., syscalls)\n",
-    "            y = malware program class\n",
-    "    \"\"\"\n",
-    "    raw_data_samples = []\n",
-    "    file_names = []\n",
-    "    frequency_dict = {}\n",
-    "    for c in CLASSES: frequency_dict[c] = 0;\n",
-    "    \n",
-    "    # get all file paths\n",
-    "    file_paths = []\n",
-    "    for dirpath, _, fnames in os.walk(os.path.join(data_path, mode)):\n",
-    "        fnames = [os.path.join(dirpath, f) for f in fnames]\n",
-    "        file_paths.extend(fnames)\n",
-    "        \n",
-    "    # limit the load_only file names for debugging purposes.\n",
-    "    if load_only > 0: file_paths = file_paths[:load_only]\n",
-    "    \n",
-    "    # TODO: implement nworkers functionality.\n",
-    "    # divide the list into chunks for each worker.\n",
-    "    #     file_paths_chunks = np.array_split(file_paths, nworkers)\n",
-    "    #     p = Pool(nworkers)\n",
-    "    #     raw_data_samples = p.map(_load_data, file_paths_chunks)\n",
-    "    \n",
-    "    raw_data_samples = _load_data(file_paths)\n",
-    "    return raw_data_samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=> Loading training data ... \n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fcac108316e4cc29a1a6e8a9841fe14",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('=> Loading training data ... ')\n",
-    "train_raw_samples = load_data('./data', mode='train', load_only=1000)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=> # Train samples =  500\n",
-      "=> # Test  samples =  500\n"
-     ]
-    }
-   ],
-   "source": [
-    "project_mode = 'debug'    # trainval, traintest, debug\n",
-    "np.random.seed(123)          # To perform the same split across multiple runs\n",
-    "\n",
-    "if project_mode == 'trainval':\n",
-    "    # Train = train subset; Test (i.e., validation) = train subset\n",
-    "    val_frac = 0.25\n",
-    "    np.random.shuffle(train_raw_samples)\n",
-    "    split_idx = int(len(train_raw_samples) * val_frac)\n",
-    "    test_raw_samples, train_raw_samples = train_raw_samples[:split_idx], train_raw_samples[split_idx:]\n",
-    "elif project_mode == 'traintest':\n",
-    "    # Train = full train set; Test = full test set\n",
-    "    test_raw_samples, _ = load_data('./data', mode='test')\n",
-    "    \n",
-    "elif project_mode == 'debug':\n",
-    "    # Train = train micro-subset; Test (i.e., validation) = train micro-subset\n",
-    "    np.random.shuffle(train_raw_samples)\n",
-    "    train_raw_samples, test_raw_samples = train_raw_samples[:500], train_raw_samples[500:1000]\n",
-    "else:\n",
-    "    raise ValueError('Unrecognized mode')\n",
-    "    \n",
-    "print('=> # Train samples = ', len(train_raw_samples))\n",
-    "print('=> # Test  samples = ', len(test_raw_samples))"
+    "# We wrote our own PyTorch data loader\n"
    ]
   },
   {
@@ -451,65 +289,6 @@
     "Suggestion:\n",
     "  - identify tokens (e.g., unigrams, bigrams)\n",
     "  - create a token -> index (int) mapping. Note that you might have a >10K unique tokens. So, you will have to choose a suitable \"vocabulary\" size."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feel free to edit anything in this block\n",
-    "\n",
-    "def get_key_idx_map(counter, vocab_size, ukn_token='_ukn_'):\n",
-    "    # counter is a mapping: token -> count\n",
-    "    # build vectorizer using vocab_size most common elements\n",
-    "    key_to_idx, idx_to_key = dict(), dict()\n",
-    "    return key_to_idx, idx_to_key\n",
-    "\n",
-    "# each element in raw_data is a tuple of (list of lines in file, label)\n",
-    "# we don't really care about lable here\n",
-    "def get_count_vectorized_data(raw_data):\n",
-    "    \n",
-    "    corpus = []\n",
-    "    \n",
-    "    for doc, _ in raw_data:\n",
-    "        corpus.append(' '.join(doc))\n",
-    "    \n",
-    "    vectorizer = CountVectorizer()\n",
-    "    return vectorizer, vectorizer.fit_transform(corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# cvec, mat = get_count_vectorized_data(train_raw_samples)\n",
-    "\n",
-    "# tokens = cvec.get_feature_names()\n",
-    "# pd.DataFrame(data=mat.toarray(), columns=tokens)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Feel free to edit anything in this block\n",
-    "\n",
-    "# MAX_VOCAB_SIZE = 1000\n",
-    "\n",
-    "# token_to_idx, idx_to_token = get_key_idx_map(token_counter, MAX_VOCAB_SIZE)\n",
-    "\n",
-    "# # Save vocab to file\n",
-    "# out_path = 'application_vocab_{}.pkl'.format(MAX_VOCAB_SIZE)\n",
-    "# with open(out_path, 'wb') as wf:\n",
-    "#     dct = {'token_to_idx': token_to_idx,\n",
-    "#           'idx_to_token': idx_to_token}\n",
-    "#     pickle.dump(dct, wf)"
    ]
   },
   {
@@ -536,62 +315,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def vectorize_raw_samples(raw_samples, nworkers=10):\n",
-    "    vectorized_samples = []\n",
-    "    #\n",
-    "    #\n",
-    "    # ------- Your Code -------\n",
-    "    #\n",
-    "    #\n",
-    "    return vectorized_samples"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "=> Processing: Train\n",
-      "\n",
-      "=> Processing: Test\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('=> Processing: Train')\n",
-    "train_data = vectorize_raw_samples(train_raw_samples)\n",
-    "print()\n",
-    "print('=> Processing: Test')\n",
-    "test_data = vectorize_raw_samples(test_raw_samples)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
-    "#\n",
-    "# ------- Your Code -------\n",
-    "#\n",
-    "#\n",
-    "# Suggestions: \n",
-    "#\n",
     "# (a) You can use torch.utils.data.TensorDataset to represent the tensors you created previously\n",
-    "# trainset = TensorDataset(train_x, train_y)\n",
-    "# testset = TensorDataset(test_x, test_y)\n",
-    "#\n",
+    "\n",
     "# (b) Store your datasets to disk so that you do not need to precompute it every time"
    ]
   },
@@ -623,7 +352,6 @@
     "CLASSES = [\"NothingFound\", \"Basun\", \"Agent\", \"Allaple\", \"AutoIt\", \n",
     "           \"Patched\", \"Swizzor\", \"Texel\", \"VB\", \"Virut\"]\n",
     "\n",
-    "\n",
     "def evaluate_preds(y_gt, y_pred):\n",
     "    pass\n",
     "\n",
@@ -631,10 +359,6 @@
     "    pass\n",
     "\n",
     "\n",
-    "def save_data(eval_data, out_path):\n",
-    "    with open(out_path, 'wb') as wf:\n",
-    "        pickle.dump(eval_data, out_path)\n",
-    "        \n",
     "def find_class_occurences(dir_path='./data/train'):\n",
     "    \"\"\"\n",
     "    Returns a dictionary with having class name as key, and the number of instances\n",
@@ -726,8 +450,11 @@
     "import malware_transforms as mlw_transforms\n",
     "\n",
     "vectorizer = mlw_transforms.CategoryCount()\n",
+    "\n",
+    "\n",
     "train_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='train', transform=vectorizer)\n",
-    "test_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='test', transform=vectorizer)"
+    "test_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='test', transform=vectorizer)\n",
+    "val_dataset = mlw_loader.MalwareDataset(root_dir='./data', dataset_type='val', transform=vectorizer)"
    ]
   },
   {
@@ -761,10 +488,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feel free to edit anything in this block\n",
-    "\n",
     "# please see models.py file for models definition\n",
-    "import anns # this file contains the defintion for FCNs/ANNs."
+    "\n",
+    "import anns "
    ]
   },
   {
@@ -783,12 +509,15 @@
     "# Define your hyperparameters here\n",
     "\n",
     "# model instantiation\n",
+    "\n",
+    "expt_name = 'baseline.model'\n",
+    "\n",
     "hidden_layers = [128, 256, 128, 64, 32, 16]\n",
     "\n",
     "# Optimization\n",
-    "n_epochs = 25\n",
+    "n_epochs = 5\n",
     "batch_size = 32\n",
-    "lr = 5e-3\n",
+    "lr = 1e-3\n",
     "momentum = 0.9\n",
     "num_workers = 4\n"
    ]
@@ -802,6 +531,13 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
@@ -809,6 +545,7 @@
     "# Feel free to edit anything in this block\n",
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True, num_workers=num_workers)\n",
     "test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=batch_size, shuffle=False, num_workers=num_workers)\n",
     "\n",
     "model = anns.ANN(input_dim=num_feats, hidden_layers=hidden_layers,\n",
     "                 output_dim=num_classes).to(device)\n",
@@ -842,8 +579,7 @@
     "        running_loss = running_loss + loss.data\n",
     "        \n",
     "        if (i % print_every) == 0:\n",
-    "            print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
-    "            break\n",
+    "            #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
     "        \n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -874,7 +610,7 @@
     "        running_loss += loss.data\n",
     "\n",
     "        if (i % print_every) == 0:\n",
-    "            print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
+    "            #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
     "\n",
     "    mean_loss = running_loss / len(loader_iterable)\n",
     "    return mean_loss"
@@ -970,10 +706,9 @@
     "    print(\"Epoch [{} / {}]\".format(epoch+1, n_epochs))\n",
     "    print(\"Training...\")\n",
     "    mean_loss_train = train_epoch(train_loader, model, criterion, optimizer, device)\n",
-    "    print(\"Validating...\")\n",
-    "    mean_loss_test = validate_epoch(test_loader, model, criterion, device)\n",
-    "    \n",
     "    train_losses.append(mean_loss_train)\n",
+    "    print(\"Validating...\")\n",
+    "    mean_loss_test = validate_epoch(val_loader, model, criterion, device)\n",
     "    test_losses.append(mean_loss_test)"
    ]
   },
@@ -1048,7 +783,7 @@
    ],
    "source": [
     "# Evaluation Metric: F1 score.\n",
-    "f1score = f1_score(actual_class, pred_class, average=None)\n",
+    "f1score = f1_score(actual_class, pred_class.numpy(), average=None)\n",
     "\n",
     "f1score.mean()"
    ]
@@ -1063,13 +798,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -1077,10 +805,13 @@
    "source": [
     "# Feel free to edit anything in this block\n",
     "\n",
-    "expt_name = 'model:mlp_tokenizer:foo_key3:val3_key4:val4'\n",
+    "save_path = ''\n",
+    "with open(save_path) as fn:\n",
+    "    pickle.dump(model, fn)\n",
+    "    \n",
     "\n",
-    "model_out_path = '{}.checkpoint.pth'.format(expt_name)\n",
-    "save_model(model, model_out_path)\n",
+    "# model_out_path = '{}.checkpoint.pth'.format(expt_name)\n",
+    "# save_model(model, model_out_path)\n",
     "\n",
     "eval_data = {\n",
     "    'epoch': [],\n",
@@ -1088,7 +819,7 @@
     "    'test_loss': [],\n",
     "    'train_acc': [],\n",
     "    'test_acc': [],\n",
-    "    ...\n",
+    "  #  ...\n",
     "}\n",
     "eval_out_path = '{}.eval.pickle'.format(expt_name)\n",
     "save_data(eval_data, eval_out_path)"
