--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -579,7 +579,8 @@
     "        running_loss = running_loss + loss.data\n",
     "        \n",
     "        if (i % print_every) == 0:\n",
-    "            #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
+    "            pass\n",
+    "        #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
     "        \n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
@@ -610,7 +611,8 @@
     "        running_loss += loss.data\n",
     "\n",
     "        if (i % print_every) == 0:\n",
-    "            #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
+    "            pass\n",
+    "        #print(\"Loss at iteration {}: {}\".format(i, loss.data))\n",
     "\n",
     "    mean_loss = running_loss / len(loader_iterable)\n",
     "    return mean_loss"
