add summary text

--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -679,13 +679,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
    "outputs": [],
@@ -1824,44 +1817,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Normalized confusion matrix\n",
-      "[[4.69331223e-01 1.97071626e-01 2.27146814e-01 3.95726157e-04\n",
-      "  1.18717847e-03 1.78076771e-02 3.95726157e-03 6.80648991e-02\n",
-      "  1.10803324e-02 3.95726157e-03]\n",
-      " [0.00000000e+00 9.97440819e-01 1.91938580e-03 0.00000000e+00\n",
-      "  0.00000000e+00 6.39795266e-04 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [1.66666667e-01 1.02040816e-02 7.55102041e-01 0.00000000e+00\n",
-      "  0.00000000e+00 2.04081633e-02 0.00000000e+00 2.72108844e-02\n",
-      "  6.80272109e-03 1.36054422e-02]\n",
-      " [0.00000000e+00 0.00000000e+00 2.89855072e-03 9.97101449e-01\n",
-      "  0.00000000e+00 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 2.14132762e-03 0.00000000e+00\n",
-      "  9.97858672e-01 0.00000000e+00 0.00000000e+00 0.00000000e+00\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [8.95522388e-02 0.00000000e+00 4.17910448e-02 0.00000000e+00\n",
-      "  0.00000000e+00 7.76119403e-02 0.00000000e+00 7.91044776e-01\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [0.00000000e+00 0.00000000e+00 1.16822430e-02 0.00000000e+00\n",
-      "  0.00000000e+00 2.33644860e-03 9.74299065e-01 1.16822430e-02\n",
-      "  0.00000000e+00 0.00000000e+00]\n",
-      " [1.70212766e-01 0.00000000e+00 6.38297872e-02 0.00000000e+00\n",
-      "  0.00000000e+00 5.22243714e-02 0.00000000e+00 7.05222437e-01\n",
-      "  1.16054159e-03 7.35009671e-03]\n",
-      " [9.71223022e-02 7.19424460e-03 2.24820144e-01 0.00000000e+00\n",
-      "  0.00000000e+00 3.59712230e-03 0.00000000e+00 8.99280576e-03\n",
-      "  6.56474820e-01 1.79856115e-03]\n",
-      " [7.56395996e-02 0.00000000e+00 8.34260289e-02 0.00000000e+00\n",
-      "  0.00000000e+00 2.00222469e-02 0.00000000e+00 4.56062291e-02\n",
-      "  4.22691880e-02 7.33036707e-01]]\n"
+      "Normalized confusion matrix\n"
      ]
     },
     {
@@ -2659,10 +2622,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd2eccaafd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7fd2d79a4450>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2696,8 +2659,6 @@
     "        print(\"Normalized confusion matrix\")\n",
     "    else:\n",
     "        print('Confusion matrix, without normalization')\n",
-    "\n",
-    "    print(cm)\n",
     "\n",
     "    fig, ax = plt.subplots()\n",
     "    im = ax.imshow(cm, interpolation='nearest', cmap=cmap)\n",
@@ -2756,9 +2717,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|        | Input Representation | Model | Optimizer | Validation Metric | Test Metric |\n",
+    "|        | Input Representation | Model | Optimizer | Final tValidation Metric | Test Metric |\n",
     "|--------|----------------------|-------|-----------|-------------------|-------------|\n",
-    "| Model1 | Unigram tokens       | MLP   | SGD       | 12.34 %           | 23.45%      |\n",
+    "| Baseline | CategoryCount       | MLP   | Adam       | 12.34 %           | 23.45%      |\n",
     "| Model2 (this notebook) |                      |       |           |                   |             |\n",
     "| ...    |                      |       |           |                   |             |"
    ]
@@ -2781,11 +2742,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
+   "source": [
+    "### 3.b.1. Performance of Simplest Approach (Baseline)\n",
+    "\n",
+    "Our simplest approach was to simply one-hot encode the command category and system call and take the sum of these one-hot-encoded vectors to get a vector per document. For more details, please see the `malware_transforms/CategoryCount` class.\n",
+    "\n",
+    "The evaluation metric we used was F1 score; accuracy was dismissed because the classes in the problem are highly imbalanced.\n",
+    "\n",
+    "We got ~ 59% mean F1-score (mean F1 score = average of F1 score for each class) for the baseline model. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.b.2. Most Helpful Vectorized Representations\n",
+    "Our most effective representation, according to mean F1 score, is Histogram Transform with `n_dim = 100`. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.b.3. Difficult Malwares to Detect\n",
+    "In the plotted confusion matrix above, we notice that the following classes are difficult to detect:\n",
+    "1. **Patched:** The class `Patched` has the worst F1-score, according to the confusion matrix. It is mostly confused (around ~80% of the time) with `Texel` class.\n",
+    "2. **Nothing Found:** The class `Nothing Found` is also confused with `Basun` and `Agent` classes. This is arguably because the classes `Basun` and `Agent` are the majority classes in the training set, due to which the bias is somewhat shifted towards the majority class. Although weighted cross entropy loss alleviates this issue to a significant extent, it still sometimes causes a confusion. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.b.4. Comments on Loss Function and Evaluation Metric\n",
+    "1. Because the classes are highly unbalanced, we used *weight* cross entropy loss, where the loss of each example was scaled by the weight of the class of that example. The weight of each class is computed as the inverse of empirical probabilities in the dataset. For more details, please refer to `get_class_weights` function.\n",
+    "\n",
+    "2. Similarly, we used F1-score instead of accuracy for the evaluation metric because F1 score is able to handle imbalanced classes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.b.5. Comments on Dimensions of Histogram Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
