--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -2717,11 +2717,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "|        | Input Representation | Model | Optimizer | Final tValidation Metric | Test Metric |\n",
-    "|--------|----------------------|-------|-----------|-------------------|-------------|\n",
-    "| Baseline | CategoryCount       | MLP   | Adam       | 12.34 %           | 23.45%      |\n",
-    "| Model2 (this notebook) |                      |       |           |                   |             |\n",
-    "| ...    |                      |       |           |                   |             |"
+    "|        | Input Representation | Model |  Final Training Loss | Final Validation Loss | Test F1-Score |\n",
+    "|--------|----------------------|-------|---------|-------------|-------------|\n",
+    "| Baseline | CategoryCount       | MLP   | 0.93           | 1.06      | 0.59           |\n",
+    "| Model2  | HistogramVectorizer25 | MLP | 1.91 | 1.93 | 0.18 |\n",
+    "| Model3  | HistogramVectorizer50 | MLP | 0.64 | 0.65 | 0.70 |\n",
+    "| Model4  | HistogramVectorizer100 | MLP | 0.60 | 0.68 | 0.70 |"
    ]
   },
   {
