--- a/Project_2_-_Handout.ipynb
+++ b/Project_2_-_Handout.ipynb
@@ -365,6 +365,39 @@
     "from sklearn.preprocessing import OneHotEncoder\n",
     "import numpy as np\n",
     "\n",
+    "import os\n",
+    "import pickle\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "def vectorize_trainset(root = '/raid/mlcysec19/student_directories/team9/vec/'):\n",
+    "    files = os.listdir(root)\n",
+    "\n",
+    "    contents = [open(root + f) for f in files]\n",
+    "    vectorizer = CountVectorizer(input='file',\n",
+    "                            token_pattern='[0-9a-fA-F]+', # tokens aren't detected unless\n",
+    "                                                          # we use this regex\n",
+    "                            max_features=100,\n",
+    "                            ngram_range=(2,2))\n",
+    "\n",
+    "    # By changing `max_features`, which determines dimensionality of representation\n",
+    "    # and `ngram_range`, which deteremines upto what level of ngrams we consider\n",
+    "    # we can create many different vectorizer schemes.\n",
+    "\n",
+    "    # We tried following\n",
+    "    # 1. Unigram 25 dimension (max_features=25, ngram_range=(1,1))\n",
+    "    # 2. Unigram 50 dimension (max_features=50, ngram_range=(1,1))\n",
+    "    # 3. Unigram 100 dimension (max_features=100, ngram_range=(1,1))\n",
+    "    # 4. Unigram 200 dimension (max_features=200, ngram_range=(1,1))\n",
+    "    # 5. Unigram+Bigram 50 dimension (max_features=50, ngram_range=(1,2))\n",
+    "    # 6. Bigram 100 dimension (max_features=100, ngram_range=(2,2))\n",
+    "\n",
+    "    X = vectorizer.fit_transform(contents)\n",
+    "\n",
+    "    # Here we save the vectorizer file, which we then load in PyTorch transformers.\n",
+    "    vfh = open('bigrams_100.v','wb')\n",
+    "    pickle.dump(vectorizer, vfh)\n",
+    "    vfh.close()\n",
+    "\n",
     "\n",
     "\"\"\"\n",
     "Some helpful data transformations for the MIST-format\n",
@@ -3595,7 +3628,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# According to MIST Format documentation only the first few arguments are importants\n",
+    "# as we go more to the right, arguments become much less informative.\n",
+    "# After doing a static analysis of token frequencies we tried following 6 different\n",
+    "# representations:\n",
+    "# 1. Unigram with 25 dimensions\n",
+    "# 2. Unigram with 50 dimensions\n",
+    "# 3. Unigram with 100 dimensions\n",
+    "# 4. Unigram with 200 dimensions\n",
+    "# 5. Unigram+Bigram v 50 dimensions\n",
+    "# 6. Bigram with 100 dimensions\n"
+   ]
   }
  ],
  "metadata": {
